--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^6.6.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-sweetalert2": "^2.1.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
